# Discuit-old

./: .gitignore  MainWindow.py  MainWindow.ui  README.md  pyproject.toml  table.py  test.csv  test.xlsx
interface/: MainWindow.py  MainWindow.ui
test-input/: test-large.csv  test.csv
