[tool.poetry]
name = "split-gui"
version = "0.1.0"
description = ""
authors = ["Dörte de Kok"]

[tool.poetry.dependencies]
python = "^3.7.1"
PyQt5 = "^5.15.2"
pandas = "^1.2.0"
openpyxl = "^3.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
